--- a/Views/Ticker/Delete.cshtml
+++ b/Views/Ticker/Delete.cshtml
@@ -1,5 +1,101 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model FinanceProject_WebApp_1_1.Models.Tickers
+
+
+@using (Html.BeginForm("Delete", "Ticker", FormMethod.Post))
+{
+
+    <div class="container p-4 border">
+        <div class="row pb-2">
+            <div class="col">
+                <h1 class="text-primary">Delete Stock</h1>
+            </div>
+        </div>
+
+        <table class="table">
+            <tr>
+                <td>
+                    @Html.LabelFor(m=>m.Ticker, "Ticker Symbol") :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Ticker,  new { @readonly = "readonly", @disabled = "disabled" })
+                    @Html.HiddenFor(m=>m.Ticker)
+                </td>
+                <td>
+                    @Html.LabelFor(m =>m.Currency_Name, "Currency") :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Currency_Name,  new { @readonly = "readonly", @disabled = "disabled" })
+                    @Html.HiddenFor(m=>m.Currency_Name)
+                </td>
+                <td>
+                    @Html.LabelFor(m=>m.Composite_Figi, "Composite Figi") :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Composite_Figi,  new { @readonly = "readonly", @disabled = "disabled" })
+                    @Html.HiddenFor(m=>m.Composite_Figi)
+                </td>
+                <td>
+                    @Html.LabelFor(m=>m.Active, "isActive") :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Active,  new { @readonly = "readonly" , @disabled = "disabled"})
+                    @Html.HiddenFor(m=>m.Active)
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.LabelFor(m=>m.Locale) :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Locale, new { @readonly = "readonly", @disabled = "disabled" })
+                    @Html.HiddenFor(m=>m.Locale)
+                </td>
+                <td>
+                    @Html.LabelFor(m=>m.Market) :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Market,  new { @readonly = "readonly" , @disabled = "disabled"})
+                    @Html.HiddenFor(m=>m.Market)
+                </td>
+                <td>
+                    @Html.LabelFor(m=>m.Cik) :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Cik,  new { @readonly = "readonly" , @disabled = "disabled"})
+                    @Html.HiddenFor(m=>m.Cik)
+                </td>
+                <td>
+                    @Html.LabelFor(m=>m.Primary_Exchange, "Primary Exchange") :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Primary_Exchange,  new { @readonly = "readonly", @disabled = "disabled" })
+                    @Html.HiddenFor(m=>m.Primary_Exchange)
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.LabelFor(m=>m.Share_Class_Figi, "Share Class Figi") :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Share_Class_Figi,  new { @readonly = "readonly", @disabled = "disabled" })
+                    @Html.HiddenFor(m=>m.Share_Class_Figi)
+                </td>
+                <td>
+                    @Html.LabelFor(m=>m.Type) :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Type , new { @readonly = "readonly", @disabled = "disabled" })
+                    @Html.HiddenFor(m=>m.Type)
+                </td>
+                <td colspan="2">
+                    @Html.LabelFor(m=>m.Name, "Company Name") :
+                    <br />
+                    @Html.TextBoxFor(m=>m.Name,  new { @readonly = "readonly", @disabled = "disabled" })
+                    @Html.HiddenFor(m=>m.Name)
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <input type="submit" value="Delete" class="btn btn-danger form-control" />
+                </td>
+                <td>
+                    <a class="btn btn-primary form-control" asp-action="Index">Cancel</a>
+                </td>
+                <td colspan="2"></td>
+            </tr>
+
+        </table>
+
+    </div>
 }
