--- a/Views/Ticker/Index.cshtml
+++ b/Views/Ticker/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
     <div class="col text-end pt-1">
-        <a asp-action="Add" class="btn btn-outline-primary"><i class="fas fa-plus"></i>Add New Stock</a>
+        <a asp-action="Add" class="btn btn-outline-primary"><i class="fas fa-plus"></i>  Add New Stock</a>
     </div>
     <br />
     <br/>
@@ -24,9 +24,9 @@
                 <td>@a.Name</td>
                 <td>@a.Currency_Name</td>
                 <td>
-                    <a asp-action="Details" class="btn btn-primary" asp-route-symbol="@a.Ticker"><i class="fa-solid fa-image"></i>Details</a>
-                    <a asp-action="Edit" class="btn btn-success" asp-route-symbol="@a.Ticker"><i class="fa-solid fa-image"></i>Edit</a>
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-symbol="@a.Ticker"><i class="fa-solid fa-image"></i>Delete</a>
+                    <a asp-action="Details" class="btn btn-primary" asp-route-symbol="@a.Ticker"><i class="fas fa-info"></i></a>
+                    <a asp-action="Edit" class="btn btn-success" asp-route-symbol="@a.Ticker"><i class="fas fa-pen"></i></a>
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-symbol="@a.Ticker"><i class="fas fa-trash"></i></a>
                 </td>
             </tr>
         }
