--- a/Views/Ticker/Index.cshtml
+++ b/Views/Ticker/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@using PagedList
+﻿@* @using PagedList
 @using PagedList.Mvc
-@model PagedList.IPagedList<Tickers>
+@model PagedList.IPagedList<Tickers> *@
+
+@model List<Tickers>
 @{
     ViewData["Title"] = "Index";
 }
@@ -33,7 +35,7 @@
     </table>
     <br/>
 
-    <div class="pagination">
+    @* <div class="pagination">
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <li class="page-item @(Model.PageNumber == 1 ? "disabled" : "")">
@@ -50,5 +52,5 @@
                 </li>
             </ul>
         </nav>
-    </div>
+    </div> *@
 </div>
